Update preferred browser when KSycoca changes

BUG: 416161